--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@ obj/project.nuget.cache
 obj/project.packagespec.json
 obj/rider.project.restore.info
 obj/staticwebassets.pack.sentinel
+bin/Debug/net6.0/Settings/appsettings.Development.json
+bin/Debug/net6.0/Settings/appsettings.json
